syntax = "proto3";

option csharp_namespace = "GrpcService2";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloStreamig (HelloRequest) returns (stream HelloReply);
  rpc SayHelloBidirectStreamig (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
